--- a/internal/templates/auth.html
+++ b/internal/templates/auth.html
@@ -18,7 +18,7 @@
             width: 100%;
             background: #009579;
         }
-        .container{
+        .form_container{
             position: absolute;
             top: 50%;
             left: 50%;
@@ -29,7 +29,7 @@
             border-radius: 7px;
             box-shadow: 0 5px 10px rgba(0,0,0,0.3);
         }
-        .container .registration{
+        .form_container .registration{
             display: none;
         }
         #check:checked ~ .registration{
@@ -41,7 +41,7 @@
         #check{
             display: none;
         }
-        .container .form{
+        .form_container .form{
             padding: 2rem;
         }
         .form header{
@@ -109,7 +109,7 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="form_container">
     <input type="checkbox" id="check">
     <div class="login form">
         <header>Login</header>
@@ -145,7 +145,7 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
-    function getFormData($form){
+    function getFormJsonData($form){
         var unindexed_array = $form.serializeArray();
         var indexed_array = {};
 
@@ -153,7 +153,7 @@
             indexed_array[n['name']] = n['value'];
         });
 
-        return indexed_array;
+        return JSON.stringify(indexed_array);
     }
 
     $(document).ready(function(){
@@ -162,7 +162,7 @@
                 url: '/login',
                 type : "POST",
                 dataType : 'json',
-                data : JSON.stringify(getFormData($("#login_form"))),
+                data : getFormJsonData($("#login_form")),
                 success : function() {
                     $("#login_alert").html("");
                     $("#login_success").html("Logged in");
@@ -179,7 +179,7 @@
                 url: '/register',
                 type : "POST",
                 dataType : 'json',
-                data : JSON.stringify(getFormData($("#register_form"))),
+                data : getFormJsonData($("#register_form")),
                 success : function() {
                     $("#register_success").html("Signed up");
                     $("#register_alert").html("");
