--- a/internal/templates/play.html
+++ b/internal/templates/play.html
@@ -185,7 +185,9 @@
         <div class="loader"></div>
         <div id="mm_form_container">
             <form id="mm_form">
-                <input type="number" name="size" placeholder="Enter party size (1-10 players)" min="1" max="10">
+                <input type="number" name="size" placeholder="Enter party size (1-10 players)" min="1" max="10" required>
+                <input type="number" name="width" placeholder="Enter field width (5-30 cells)" min="5" max="30" required>
+                <input type="number" name="height" placeholder="Enter field height (5-30 cells)" min="5" max="30" required>
                 <input id="mm_button" type="button" class="button" value="Create party">
             </form>
             <div class="connect">
@@ -210,10 +212,36 @@
 </div>
 <div class="game">
     <div class="players"></div>
+    <br>
     <div class="game_fields">
-        <input id="add_snake_button" type="button" class="button" value="Add your snake [TEST]">
+        Enter your snake spawn coordinates:
+        <div>
+            <input id="snake_x" type="number" placeholder="Enter X">
+            <input id="snake_y" type="number" placeholder="Enter Y">
+        </div>
+        <br>
+        Where your snake will go?
+        <div>
+            <input type="radio" name="direction" value="up" checked="checked">UP
+            <input type="radio" name="direction" value="right">RIGHT
+            <input type="radio" name="direction" value="down">DOWN
+            <input type="radio" name="direction" value="left">LEFT
+        </div>
+        <br>
+        Create your snake commands sequence:
+        <div>
+            <input id="left_button" type="button" class="button" value="LEFT">`
+            <input id="right_button" type="button" class="button" value="RIGHT">
+            <input id="move_button" type="button" class="button" value="MOVE FORWARD">`
+        </div>
+        <br>
+        <input id="cmd_list" type="text">
+        <br><br>
+        <input id="add_snake_button" type="button" class="button" value="Create your snake!">
+        <br>
+        <input id="remove_snake_button" type="button" class="button" value="Remove it from game">
     </div>
-    <canvas width="1000" height="1000" id="game_area"></canvas>
+    <canvas width="2000" height="2000" id="game_area"></canvas>
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -222,7 +250,7 @@
         var unindexed_array = $form.serializeArray();
         var indexed_array = {};
 
-        $.map(unindexed_array, function(n, i){
+        $.map(unindexed_array, function(n){
             let value = n['value'];
             if (/^\d+$/.test(n['value'])) {
                 value = parseInt(n['value'])
@@ -241,27 +269,39 @@
         return true;
     }
 
+    var players = {};
+
+    const colors = ['yellow', 'blue', 'red', 'purple', 'pink', 'orange', 'black', 'brown', 'cyan', 'gray']
+    let snakeColor = colors[Math.floor(Math.random() * colors.length)];
     let canvas = document.getElementById('game_area'),
         context = canvas.getContext('2d'),
-        boxSize = 40;
+        boxSize = 40,
+        width = 0, height = 0;
 
     var socket = new WebSocket("ws://" + location.host + "/ws");
     socket.onmessage = function(event) {
+        console.log(event.data);
         if (isJson(event.data)) {
             let obj = JSON.parse(event.data);
-            // TODO update players info with scores and status
             // it's party created - let's play game!
             if (Object.hasOwn(obj, 'id')) {
                 $('.form_container').fadeOut();
                 $('.game').show();
                 let playersHtml = "";
                 obj.players.forEach(function (player) {
+                    players[player.id] = {
+                        "name": player.name,
+                        "skill": player.skill
+                    }
                     playersHtml += "ID: " + player.id + " Name: " + player.name + " Skill: " + player.skill + "<br>";
                 })
-                $('.players').html(playersHtml)
+                $('.players').html(playersHtml);
             }
             // it's field update
             if (Object.hasOwn(obj, 'width') && Object.hasOwn(obj, 'height')) {
+                width = obj.width;
+                height = obj.height;
+
                 context.fillStyle = "white";
                 context.fillRect(0, 0, canvas.width, canvas.height);
 
@@ -278,14 +318,29 @@
                 context.strokeStyle = "black";
                 context.stroke();
 
-                for (const [key, snake] of Object.entries(obj.snakes)) {
-                    snake.body.forEach(function (points) {
-                        context.fillStyle = "green";
-                        context.fillRect(points.x * boxSize + p, points.y * boxSize + p, boxSize, boxSize);
-                    })
-                }
+                obj.snakes.forEach(function (snake) {
+                    for (let i = 0; i < snake.body.length; i++) {
+                        let points = snake.body[i];
+                        if (i === 0) {
+                            context.fillStyle = "green";
+                        } else {
+                            context.fillStyle = snake.color;
+                        }
+                        context.fillRect((points.x - 1) * boxSize + p, (points.y - 1) * boxSize + p, boxSize, boxSize);
+                    }
+                })
+
                 context.fillStyle = "red";
-                context.fillRect(obj.food.position.x * boxSize + p, obj.food.position.y * boxSize + p, boxSize, boxSize);
+                context.fillRect((obj.food.position.x - 1) * boxSize + p, (obj.food.position.y - 1) * boxSize + p, boxSize, boxSize);
+
+                let playersHtml = ""
+                for (const [userId, score] of Object.entries(obj.scores)) {
+                    players[userId].skill = score
+                    playersHtml += "ID: " + userId + " Name: " + players[userId].name + " Skill: " + players[userId].skill + "<br>";
+                }
+                if (playersHtml !== "") {
+                    $('.players').html(playersHtml);
+                }
             }
         }
     };
@@ -313,12 +368,54 @@
             $('.loader').show();
         });
 
+        $("#right_button").on('click', function(){
+            $("#cmd_list").val($("#cmd_list").val() + "right,");
+        });
+        $("#left_button").on('click', function(){
+            $("#cmd_list").val($("#cmd_list").val() + "left,");
+        });
+        $("#move_button").on('click', function(){
+            $("#cmd_list").val($("#cmd_list").val() + "move,");
+        });
         $("#add_snake_button").on('click', function(){
+            let direction = $("input[type='radio'][name='direction']:checked").val(),
+                xTo, yTo;
+            switch (direction) {
+                case 'right':
+                    xTo = 1;
+                    yTo = 0;
+                    break;
+                case 'down':
+                    xTo = 0;
+                    yTo = 1;
+                    break;
+                case 'left':
+                    xTo = -1;
+                    yTo = 0;
+                    break;
+                default:
+                    xTo = 0;
+                    yTo = -1;
+            }
+
             $.ajax({
                 url: '/player/ai',
-                type : "POST"
+                type : "POST",
+                contentType: "application/json; charset=utf-8",
+                data : '{"ai":"' + $("#cmd_list").val()
+                    + '", "x": ' + $("#snake_x").val()
+                    + ', "y": ' + (height - $("#snake_y").val() + 1)
+                    + ', "x_to": ' + xTo
+                    + ', "y_to": ' + yTo
+                    + '}'
             })
         });
+        $("#remove_snake_button").on('click', function () {
+            $.ajax({
+                url: '/player/ai',
+                type: "DELETE"
+            })
+        })
 
         $("#logout_button").on('click', function(){
             socket.close()
