--- a/internal/server/templates/play.html
+++ b/internal/server/templates/play.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Play Game</title>
+    <link rel="icon" href="favicon.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
         * {
