--- a/internal/server/templates/play.html
+++ b/internal/server/templates/play.html
@@ -165,8 +165,14 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        .game{
+        .game {
             display: none;
+        }
+        .game_fields {
+            display: flex;
+        }
+        .game_field {
+            flex: 50%;
         }
         #canvas {
             background: #fff;
@@ -237,70 +243,73 @@
     <div class="players"></div>
     <br>
     <div class="game_fields">
-        Enter your snake spawn coordinates:
-        <div>
-            <input id="snake_x" type="number" placeholder="Enter X">
-            <input id="snake_y" type="number" placeholder="Enter Y">
+        <div class="game_field">
+            Enter your snake spawn coordinates:
+            <div>
+                <input id="snake_x" type="number" placeholder="Enter X">
+                <input id="snake_y" type="number" placeholder="Enter Y">
+            </div>
+            <br>
+            Where your snake will go?
+            <div>
+                <input type="radio" name="direction" value="up" checked="checked">UP
+                <input type="radio" name="direction" value="right">RIGHT
+                <input type="radio" name="direction" value="down">DOWN
+                <input type="radio" name="direction" value="left">LEFT
+            </div>
+            <br>
+            Create your snake commands sequence:
+            <div>
+                <input id="if_button" type="button" class="button" value="IF">
+                <input id="then_button" type="button" class="button" value="THEN">
+                <input id="elseif_button" type="button" class="button" value="ELSE IF">
+                <input id="else_button" type="button" class="button" value="ELSE">
+                <input id="end_button" type="button" class="button" value="END">
+            </div>
+            <div>
+                <input id="and_button" type="button" class="button" value="&& (AND)">
+                <input id="or_button" type="button" class="button" value="|| (OR)">
+                <input id="not_button" type="button" class="button" value="! (NOT)">
+            </div>
+            <div>
+                <select id="obstacle_type">
+                    <option value="edge" selected="selected">Edge</option>
+                    <option value="snake">Snake</option>
+                    <option value="food">Food</option>
+                </select>
+                <select id="obstacle_direction">
+                    <option value="forward" selected="selected">Forward</option>
+                    <option value="left">Left</option>
+                    <option value="right">Right</option>
+                </select>
+                <select id="obstacle_condition">
+                    <option value="==" selected="selected">==</option>
+                    <option value="!=">!=</option>
+                    <option value="<<"><</option>
+                    <option value=">>">></option>
+                    <option value="<="><=</option>
+                    <option value=">=">>=</option>
+                </select>
+                <input id="obstacle_distance" type="number" placeholder="Enter distance to obstacle">
+                <input id="add_condition_button" type="button" class="button" value="ADD CONDITION">
+            </div>
+            <div>
+                <input id="left_button" type="button" class="button" value="LEFT">
+                <input id="right_button" type="button" class="button" value="RIGHT">
+                <input id="move_button" type="button" class="button" value="MOVE FORWARD">
+            </div>
+            <br>
+            Your snake color:
+            <br>
+            <div class='box'></div>
+            <br><br>
+            <input id="add_snake_button" type="button" class="button" value="Create your snake!">
+            <br>
+            <input id="remove_snake_button" type="button" class="button" value="Remove snake from game">
         </div>
-        <br>
-        Where your snake will go?
-        <div>
-            <input type="radio" name="direction" value="up" checked="checked">UP
-            <input type="radio" name="direction" value="right">RIGHT
-            <input type="radio" name="direction" value="down">DOWN
-            <input type="radio" name="direction" value="left">LEFT
+        <div class="game_field">
+            <textarea id="cmd_list" rows="15" cols="40"></textarea>
         </div>
-        <br>
-        Create your snake commands sequence:
-        <div>
-            <input id="if_button" type="button" class="button" value="IF">
-            <input id="then_button" type="button" class="button" value="THEN">
-            <input id="elseif_button" type="button" class="button" value="ELSE IF">
-            <input id="else_button" type="button" class="button" value="ELSE">
-            <input id="end_button" type="button" class="button" value="END">
-        </div>
-        <div>
-            <input id="and_button" type="button" class="button" value="&& (AND)">
-            <input id="or_button" type="button" class="button" value="|| (OR)">
-            <input id="not_button" type="button" class="button" value="! (NOT)">
-        </div>
-        <div>
-            <select id="obstacle_type">
-                <option value="edge" selected="selected">Edge</option>
-                <option value="snake">Snake</option>
-                <option value="food">Food</option>
-            </select>
-            <select id="obstacle_direction">
-                <option value="forward" selected="selected">Forward</option>
-                <option value="left">Left</option>
-                <option value="right">Right</option>
-            </select>
-            <select id="obstacle_condition">
-                <option value="==" selected="selected">==</option>
-                <option value="!=">!=</option>
-                <option value="<<"><</option>
-                <option value=">>">></option>
-                <option value="<="><=</option>
-                <option value=">=">>=</option>
-            </select>
-            <input id="obstacle_distance" type="number" placeholder="Enter distance to obstacle">
-            <input id="add_condition_button" type="button" class="button" value="ADD CONDITION">
-        </div>
-        <div>
-            <input id="left_button" type="button" class="button" value="LEFT">
-            <input id="right_button" type="button" class="button" value="RIGHT">
-            <input id="move_button" type="button" class="button" value="MOVE FORWARD">
-        </div>
-        <br>
-        <input id="cmd_list" type="text">
-        <br><br>
-        Your snake color:
-        <br>
-        <div class='box'></div>
-        <br><br>
-        <input id="add_snake_button" type="button" class="button" value="Create your snake!">
-        <br>
-        <input id="remove_snake_button" type="button" class="button" value="Remove snake from game">
     </div>
     <canvas width="2000" height="2000" id="game_area"></canvas>
 </div>
@@ -449,6 +458,53 @@
         return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
     }
 
+    function formatCmdList(value) {
+        let formattedValue = "",
+            tabsCount = 0,
+            symbolsNewLine = ["(", ")", ";", "{", "}", "&", "|"],
+            symbolsNotNewLine = ["&", "|"],
+            symbolsSpace = [">", "<", "=", "!", "(", ")", "{", "}", "&", "|"];
+        value += " ";
+        console.log(value);
+        for (let i = 0; i < value.length - 1; i++) {
+            if ((value[i] === "(" && !value[i+1].match(/[a-z]/i)) || value[i] === "{") {
+                tabsCount++;
+            }
+            if (
+                (value[i] === ";" && value[i+1] === "}")
+                || ((value[i] === ")" || value[i] === "}")
+                    && !value[i+1].match(/[a-z]/i)
+                    && !symbolsNotNewLine.includes(value[i+1]))
+            ) {
+                tabsCount--;
+            }
+
+            formattedValue += value[i];
+            if (
+                (symbolsSpace.includes(value[i]) && !symbolsSpace.includes(value[i+1]))
+                || (!symbolsSpace.includes(value[i]) && symbolsSpace.includes(value[i+1]))
+                || ((value[i] === "&" && value[i+1] !== "&") || (value[i] === "|" && value[i+1] !== "|"))
+            ) {
+                formattedValue += " ";
+            }
+
+            if (
+                symbolsNewLine.includes(value[i])
+                && !(value[i] === "|" && (value[i+1] === "|" || value[i+1] === "("))
+                && !(value[i] === "&" && (value[i+1] === "&" || value[i+1] === "("))
+                && !((value[i] === "(" || value[i] === ")") && value[i+1].match(/[a-z]/i))
+            ) {
+                formattedValue += "\n";
+                if (tabsCount > 0) {
+                    formattedValue += "\t".repeat(tabsCount);
+                }
+            }
+            console.log(tabsCount);
+        }
+
+        $("#cmd_list").val(formattedValue);
+    }
+
     $(document).ready(function(){
         let mapId = getParameterByName('mapId');
         if (mapId !== "") {
@@ -487,46 +543,69 @@
             $('.loader').show();
         });
 
+        $("#cmd_list").bind('input propertychange', function() {
+            formatCmdList(this.value);
+        });
+
         $("#if_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "if(");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#then_button").on('click', function(){
             let cmdListVal = $("#cmd_list").val(),
                 bracketsNumberToInsert = (cmdListVal.split("(").length - 1) - (cmdListVal.split(")").length - 1);
             $("#cmd_list").val($("#cmd_list").val() + ")".repeat(bracketsNumberToInsert) + "then{");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#elseif_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "}elseif(");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#else_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "}else{");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#end_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "}");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#and_button").on('click', function(){
-            $("#cmd_list").val($("#cmd_list").val() + ")&&(");
+            let cmdListVal = $("#cmd_list").val();
+            $("#cmd_list").val(cmdListVal.substring(0, cmdListVal.lastIndexOf("(")) + "(" + cmdListVal.substring(cmdListVal.lastIndexOf("("), cmdListVal.length));
+            $("#cmd_list").val($("#cmd_list").val() + "&&");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#or_button").on('click', function(){
-            $("#cmd_list").val($("#cmd_list").val() + ")||(");
+            let cmdListVal = $("#cmd_list").val();
+            $("#cmd_list").val(cmdListVal.substring(0, cmdListVal.lastIndexOf("(")) + "(" + cmdListVal.substring(cmdListVal.lastIndexOf("("), cmdListVal.length));
+            $("#cmd_list").val($("#cmd_list").val() + "||");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#not_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "!(");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#add_condition_button").on('click', function(){
+            console.log($("#obstacle_type").val());
             $("#cmd_list").val($("#cmd_list").val()
+                + "(" +
                 + $("#obstacle_type").val() + "_" + $("#obstacle_direction").val()
                 + $("#obstacle_condition").val() + $("#obstacle_distance").val()
+                + ")"
             );
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#right_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "right;");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#left_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "left;");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#move_button").on('click', function(){
             $("#cmd_list").val($("#cmd_list").val() + "move;");
+            formatCmdList($("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),""));
         });
         $("#add_snake_button").on('click', function(){
             let direction = $("input[type='radio'][name='direction']:checked").val(),
@@ -553,7 +632,7 @@
                 url: '/player/ai',
                 type : "POST",
                 contentType: "application/json; charset=utf-8",
-                data : '{"ai":"' + $("#cmd_list").val()
+                data : '{"ai":"' + $("#cmd_list").val().replace((/ |\r\n|\n|\r|\t/gm),"")
                     + '", "x": ' + $("#snake_x").val()
                     + ', "y": ' + (height - $("#snake_y").val() + 1)
                     + ', "x_to": ' + xTo
